<resources xmlns:android="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Idillionaire</string>
    <string name="start">Get Started</string>
    <string name="Name">idillionaire</string>
    <string name="firstline">App provides you the daily energy boost</string>
    <string name="secondline">of positivity that gives you the clarity insight, and inner</string>
    <string name="thirdline">peace to get through your day.</string>
    <string name="loginbtn">Login</string>
    <string name="forgot">Forgot password?</string>
    <string name="orLogin">Or Login using</string>
    <string name="signup">Sign up</string>
    <string name="SignUpBtn">Sign Up</string>
    <string name="alreadyacount">Already have an account ?</string>
    <string name="login">Login</string>
    <string name="life">LIFE</string>
    <string name="news">NEWS</string>
    <string name="culture">CULTURE</string>
    <string name="music">MUSIC</string>
    <string name="nature">NATURE</string>
    <string name="leaf">LEAF</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="follow_us">FOLLOW US</string>
    <string name="terms_to_use">Terms to Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="link">Link</string>
    <string name="about">ABOUT</string>
    <string name="report_a_problem">Report a Problem</string>
    <string name="support">SUPPORT</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="settings">SETTINGS</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="account">ACCOUNT</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_the_app">Share the App</string>
    <string name="general">GENERAL</string>
    <string name="options">Options</string>

    <string name="app_name_analytic">Google Analytics</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">Second Activity</string>
    <string name="toast_track_exception">Exception is recorded. Check the Crashes and Exceptions on Google Dashboard!</string>
    <string name="toast_app_crash">The app will crash now! Check the Crashes and Exceptions on Google Dashboard!</string>
    <string name="fragment_footer">Fragment is loaded! Check the screen view on Google Analytics Dashboard.</string>
    <string name="msg_instructions">Click on each button to see the appropriate tracking on Google Analytics</string>
    <string name="btn_second_screen">Second Screen</string>
    <string name="btn_send_event">Track Event</string>
    <string name="btn_exception_tracking">Track Exception</string>
    <string name="btn_app_crash">Track App Crash</string>
    <string name="btn_load_fragment">Fragment Tracking</string>

    <string name="facebook_app_id">274498999807334</string>
    <string name="fb_login_protocol_scheme">fb274498999807334</string>

    <string name="id_token_fmt">ID Token: %s</string>


    // test

    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">790686367891-caen4up6c8v1sosk67n1qgcvj7dlo971.apps.googleusercontent.com</string>

    // Twitter
    <string name="com.twitter.sdk.android.CONSUMER_KEY" tools:ignore="ExtraTranslation">FuipP0lP3pQAOiPR50VAqmRr1</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" tools:ignore="ExtraTranslation">eeH8XNQNj3l1yRDlCmvFr37SBTOe0WJ7IshPEFzRs34OyNqxoE</string>


    // Sample Adds

    <string name="add_app_id">ca-app-pub-3940256099942544~3347511713</string>

    <string name="add_add_id">ca-app-pub-3940256099942544/1033173712</string>

    // Sample Adds

    // Original Adds

    <!--<string name="add_app_id">ca-app-pub-7419167613886667~8417138460</string>-->
<!---->
    <!--<string name="add_add_id">ca-app-pub-7419167613886667/5024688360</string>-->

    // Original Adds


</resources>
