<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    android:id="@+id/main_parent"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_bg_img"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:weightSum="5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="65dp"
            android:src="@drawable/dillionaireicon"
            android:scaleType="fitCenter" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        style="@style/edit_fieldcomplete"
        android:layout_margin="15dp">



         <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
             android:layout_marginBottom="5dp"
            android:hint="Email"
             android:textCursorDrawable="@null"
             android:focusable="true"
             android:inputType="textEmailAddress"
             style="@style/edit_fieldbackgroundlogin"
             android:id="@+id/email_login"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height=".5dp"
            android:background="#C6C5CA"
            ></LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Password"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:textCursorDrawable="@null"
            android:focusable="true"
            android:inputType="textPassword"
            style="@style/edit_fieldbackgroundlogin"
            android:layout_gravity="center"
            android:id="@+id/pass_login" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:weightSum="3"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="4dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/loginbtn"
            android:textSize="18sp"
            android:textAllCaps="false"
            style="@style/started_button"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="2dp"
            android:textColor="#ffffff"
            android:id="@+id/LogInBtn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:textAlignment="center"
            android:textColor="#fbc05a"
            android:layout_marginTop="10dp"
            android:id="@+id/forgot_txt"/>
        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="#FBC05A"></LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/orLogin"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="15sp"
            android:id="@+id/or_login"/>

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="#FBC05A"></LinearLayout>
    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:orientation="horizontal"
        android:gravity="center">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/fb"
            android:id="@+id/fb_login"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/twitter"
            android:id="@+id/twitter_login"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/google"
            android:id="@+id/google_login"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight=".5"
        android:gravity="center_vertical"
        android:layout_marginLeft="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account ?"
            android:textColor="#000000"
            android:textSize="16sp"
            android:id="@+id/dnt_have"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:paddingLeft="10dp"
            android:textColor="#fbc05a"
            android:textSize="16sp"
            android:id="@+id/signup_change"
            android:onClick="OnsignupButtonClick"/>
    </LinearLayout>


</LinearLayout>
</RelativeLayout>